[package]
name = "grepr"
version = "0.1.0"
authors = ["Dmitriy Popov <me@demestoss.com>"]
edition = "2021"

[lib]
name = "grepr"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.23", features = ["derive"] }
